solucionando con el hys 3