@@ -1,8 +1,3 @@
-/*
- * To change this license header, choose License Headers in Project Properties.
- * To change this template file, choose Tools | Templates
- * and open the template in the editor.
- */
 package com.portfolio.cm.Security.Entity;
 
 import java.util.Collection;
@@ -12,19 +7,16 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-/**
- *
- * @author Usuario
- */
-public class UsuarioPrincipal implements UserDetails {
 
-    private String nombre;
-    private String nombreUsuario;
-    private String email;
-    private String password;
-    private Collection<? extends GrantedAuthority> authorities;
+public class UsuarioPrincipal implements UserDetails{
+private String nombre;
+private String nombreUsuario;
+private String email;
+private String password;
+private Collection<? extends GrantedAuthority> authorities;
 
-    //Constructor
+//Constructor 
+
     public UsuarioPrincipal(String nombre, String nombreUsuario, String email, String password, Collection<? extends GrantedAuthority> authorities) {
         this.nombre = nombre;
         this.nombreUsuario = nombreUsuario;
@@ -32,18 +24,16 @@ public class UsuarioPrincipal implements UserDetails {
         this.password = password;
         this.authorities = authorities;
     }
-
-    public static UsuarioPrincipal build(Usuario usuario) {
-        List<GrantedAuthority> authorities = usuario.getRoles().stream()
-                .map(rol -> new SimpleGrantedAuthority(rol.getRolNombre().name())).collect(Collectors
-                .toList());
-        return new UsuarioPrincipal(usuario.getNombre(), usuario.getNombreUsuario(), usuario.getEmail(),
-                 usuario.getPassword(), authorities);
-    }
+        
+   public static UsuarioPrincipal build(Usuario usuario){
+       
+       List<GrantedAuthority> authorities = usuario.getRoles().stream().map(rol -> new SimpleGrantedAuthority(rol.getRolNombre().name())).collect(Collectors.toList());
+       return new UsuarioPrincipal(usuario.getNombre(),usuario.getNombreUsuario(),usuario.getEmail(),usuario.getPassword(),authorities);
+   }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return authorities;
+       return authorities;
     }
 
     @Override
@@ -52,13 +42,13 @@ public class UsuarioPrincipal implements UserDetails {
     }
 
     public String getNombre() {
-        return nombre;
+        return password;
     }
-
+  
     public String getEmail() {
-        return email;
+        return password;
     }
-
+   
     @Override
     public String getUsername() {
         return nombreUsuario;
@@ -83,5 +73,5 @@ public class UsuarioPrincipal implements UserDetails {
     public boolean isEnabled() {
         return true;
     }
-
+    
 }
